Add communication via log library for demo app